# vePhone

./: .gitignore  README.md
Quick Start/Android/: README.md  build.gradle  settings.gradle
Quick Start/Android/app/: build.gradle  proguard-rules.pro
Quick Start/MobileUse/openapi_sample/: python_openapi_sample.py
Quick Start/MobileUse/ui_test_demo/: .env.example  README.md  pyproject.toml  requirements.txt
Quick Start/MobileUse/ui_test_demo/src/: case_runner.py
Quick Start/MobileUse/ui_test_demo/src/video_prompt/: __init__.py  core.py  run_video_prompt.py
Quick Start/Web/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
Quick Start/Web/src/: .env  config.js  index.css  index.html  main.js  utils.js
Quick Start/Windows/: .gitignore  README.md  Resource.h  main_wnd.cpp  msg_processor.cpp  msg_processor.h  pch.h  utils.cpp  utils.h  vePhoneQkDemo.aps  vePhoneQkDemo.rc  vePhoneQkDemo.sln  vePhoneQkDemo.vcxproj  vePhoneQkDemo.vcxproj.filters  ve_qk_class.cpp  ve_qk_class.h  ve_qk_demo.cpp  ve_qk_demo.h
Quick Start/iOS/: .gitignore  Podfile  README.md
Quick Start/iOS/VePhoneDemo/: AppDelegate.h  AppDelegate.m  AudioCaptureTool.h  AudioCaptureTool.m  Constants.h  Constants.m  Define.h  Info.plist  UserInfoManager.h  UserInfoManager.m  Utils.h  Utils.m  VeCloudPhonePreview.h  VeCloudPhonePreview.m  VeNavigationController.h  VeNavigationController.m  VePhoneDisplayViewController.h  VePhoneDisplayViewController.m  VePhonePublicDemo.pch  VePhoneViewController.h  VePhoneViewController.m  VePhoneViewController.xib  VideoCaptureTool.h  (+1 more)
(+102 files in other folders)
