[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ui_test_demo"
version = "0.1.0"
description = "Python 3.12 project scaffold managed by uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["volcengine-python-sdk[ark]"]

[project.urls]
homepage = ""
repository = ""


[tool.hatch.build.targets.wheel]
packages = ["src/ui_test_demo"]
